<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6003A9F4"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="227dp"
        android:layout_height="184dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:text="@string/position_tracker"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/routeImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <ImageView
        android:id="@+id/navImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/navigation"
        app:layout_constraintBottom_toTopOf="@+id/btnNavigation"
        app:layout_constraintEnd_toStartOf="@+id/routeImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnNavigation"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:text="@string/navigation"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navImage" />

    <ImageView
        android:id="@+id/routeImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="TODO"
        android:src="@drawable/route_history"
        app:layout_constraintEnd_toStartOf="@+id/aboutImage"
        app:layout_constraintStart_toEndOf="@+id/navImage"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:text="@string/route_history"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnAbout"
        app:layout_constraintStart_toEndOf="@+id/btnNavigation"
        app:layout_constraintTop_toBottomOf="@+id/routeImage" />

    <ImageView
        android:id="@+id/aboutImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/routeImage"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:text="@string/about"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHistory"
        app:layout_constraintTop_toBottomOf="@+id/aboutImage" />

</androidx.constraintlayout.widget.ConstraintLayout>